chapter_argocd/app/Kustomize/overlays/prd/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: handson
  name: handson
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: ghcr.io/cloudnativedaysjp/cnd-handson-app/handson:modern
        name: handson
