chapter_argocd/app/Kustomize/overlays/prd/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-httproute
spec:
  hostnames:
  - prd.kustomize.argocd.example.com
